Update portfolio app listings

--- a/index.html
+++ b/index.html
@@ -149,39 +149,42 @@
         </div>
         <div class="content-grid">
           <article class="card project-card">
-            <h3>Pulse — Fitness Companion</h3>
-            <p>
-              SwiftUI + HealthKit app with live activity rings and personalized
-              coaching.
-            </p>
+            <h3>
+              <a href="https://apps.apple.com/us/app/perk-punch/id6746662386"
+                >Perk Punch</a
+              >
+            </h3>
+            <p>Punch Your Way to Perks.</p>
             <div class="project-tags">
-              <span>SwiftUI</span>
-              <span>HealthKit</span>
-              <span>Combine</span>
+              <span>Loyalty</span>
+              <span>Rewards</span>
+              <span>iOS</span>
             </div>
           </article>
           <article class="card project-card">
-            <h3>Studio Tasks</h3>
-            <p>
-              A UIKit productivity app with real-time collaboration and offline
-              sync.
-            </p>
+            <h3>
+              <a href="https://apps.apple.com/us/app/bookworm/id6738531588"
+                >BookWorm!</a
+              >
+            </h3>
+            <p>Library, organize, search.</p>
             <div class="project-tags">
-              <span>UIKit</span>
-              <span>CloudKit</span>
-              <span>Core Data</span>
+              <span>Library</span>
+              <span>Catalog</span>
+              <span>Search</span>
             </div>
           </article>
           <article class="card project-card">
-            <h3>Lensy</h3>
-            <p>
-              Camera-forward journaling with custom filters and Core ML
-              enhancements.
-            </p>
+            <h3>
+              <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120"
+                >Auto Do It</a
+              >
+            </h3>
+            <p>ToDo List Plan, Organize, AI.</p>
             <div class="project-tags">
-              <span>Core ML</span>
-              <span>AVFoundation</span>
-              <span>Metal</span>
+              <span>To-Do</span>
+              <span>Planning</span>
+              <span>AI</span>
             </div>
           </article>
         </div>
