Add portfolio project icons

--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
         </div>
         <div class="content-grid">
           <article class="card project-card">
+            <img
+              class="project-icon"
+              src="https://ibb.co/zVvgkd1y"
+              alt="Perk Punch app icon"
+            />
             <h3>
               <a href="https://apps.apple.com/us/app/perk-punch/id6746662386"
                 >Perk Punch</a
@@ -162,6 +167,11 @@
             </div>
           </article>
           <article class="card project-card">
+            <img
+              class="project-icon"
+              src="https://ibb.co/zVMKKqBt"
+              alt="BookWorm! app icon"
+            />
             <h3>
               <a href="https://apps.apple.com/us/app/bookworm/id6738531588"
                 >BookWorm!</a
@@ -175,6 +185,11 @@
             </div>
           </article>
           <article class="card project-card">
+            <img
+              class="project-icon"
+              src="https://ibb.co/35JBTD8W"
+              alt="Auto Do It app icon"
+            />
             <h3>
               <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120"
                 >Auto Do It</a
