Update portfolio app icon links

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVvgkd1y"
+              src="https://postimg.cc/WFstqhbG"
               alt="Perk Punch app icon"
             />
             <h3>
@@ -169,7 +169,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVMKKqBt"
+              src="https://postimg.cc/0zz3YfHS"
               alt="BookWorm! app icon"
             />
             <h3>
@@ -187,7 +187,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/35JBTD8W"
+              src="https://postimg.cc/N2rDyJ0L"
               alt="Auto Do It app icon"
             />
             <h3>
