Update portfolio icon links

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVvgkd1y"
+              src="https://i.postimg.cc/XJC5hCRz/Perk-Punch-Icon.webp"
               alt="Perk Punch app icon"
             />
             <h3>
@@ -169,7 +169,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVMKKqBt"
+              src="https://i.postimg.cc/Vkg8cZqK/Book-Worm-Icon.webp"
               alt="BookWorm! app icon"
             />
             <h3>
@@ -187,7 +187,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/35JBTD8W"
+              src="https://i.postimg.cc/rsfPP7XG/Auto-Do-It-Icon.webp"
               alt="Auto Do It app icon"
             />
             <h3>
