--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVvgkd1y"
+              src="https://i.postimg.cc/J4YHxxgK/PPICON.png"
               alt="Perk Punch app icon"
             />
             <h3>
@@ -169,7 +169,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/zVMKKqBt"
+              src="https://i.postimg.cc/gjNXfH27/BWICON.png"
               alt="BookWorm! app icon"
             />
             <h3>
@@ -187,7 +187,7 @@
           <article class="card project-card">
             <img
               class="project-icon"
-              src="https://ibb.co/35JBTD8W"
+              src="https://i.postimg.cc/3Jtm6Yy7/ADIICON.png"
               alt="Auto Do It app icon"
             />
             <h3>
