--- a/index.html
+++ b/index.html
@@ -162,33 +162,60 @@
       <section class="tab-panel" id="about">
         <div class="panel-header">
           <div>
-            <h2>About Me</h2>
-            <p class="muted">Quick snapshot of my background and focus.</p>
+            <h2>About the Author</h2>
+            <p class="muted">My journey into iOS development and what drives me.</p>
           </div>
         </div>
         <div class="card about-card">
+          <h3 style="margin-bottom: 16px; color: var(--text-primary);">Connor Hill</h3>
           <p>
-            I am an iOS app developer who obsesses over pixel-perfect details and
-            buttery-smooth performance. My mission is to craft delightful mobile
-            experiences that feel native, intuitive, and reliable.
+            I began my iOS development journey 2 years ago, diving deep into Swift, SwiftUI, and the Apple ecosystem. 
+            What started as curiosity about building mobile apps quickly evolved into a passion for crafting polished, 
+            user-focused experiences.
           </p>
           <p>
-            On this blog, I share my progress, design patterns, and lessons
-            learned while building production apps.
+            Since then, I've successfully launched 3 apps on the App Store, each teaching me valuable lessons about 
+            design, performance optimization, and the importance of user feedback. From conceptualization to 
+            App Store submission, I've experienced the full development lifecycle—and loved every minute of it.
+          </p>
+          <p>
+            Through this blog, I document my learning process, share insights on iOS development best practices, 
+            and explore the evolving landscape of Apple platforms. Whether it's deep-diving into SwiftUI patterns, 
+            profiling app performance, or discussing architecture decisions, I aim to create content that helps 
+            fellow developers grow.
+          </p>
+          <p>
+            I plan to continue expanding my app portfolio, experimenting with new Apple technologies, and learning 
+            as much as I can about building exceptional iOS experiences. My goal is to master Apple's first-party 
+            APIs and frameworks while sharing what I learn along the way.
           </p>
           <div class="about-stats">
             <div>
-              <h4>6+</h4>
+              <h4>2</h4>
               <span>Years in iOS</span>
             </div>
             <div>
-              <h4>18</h4>
-              <span>Shipped Apps</span>
+              <h4>3</h4>
+              <span>Apps in App Store</span>
             </div>
             <div>
-              <h4>3</h4>
-              <span>Current Focus Areas</span>
+              <h4>∞</h4>
+              <span>Always Learning</span>
             </div>
+          </div>
+          <div style="margin-top: 32px; padding-top: 32px; border-top: 1px solid var(--border);">
+            <p style="margin-bottom: 8px; font-weight: 600; color: var(--text-primary);">
+              Let's Connect
+            </p>
+            <p style="color: var(--text-secondary); margin-bottom: 12px;">
+              Have questions, collaboration ideas, or just want to chat about iOS development?
+            </p>
+            <p>
+              <strong>Email:</strong> 
+              <a href="mailto:hello@codejourney.dev" style="color: var(--accent); text-decoration: none;">
+                hello@codejourney.dev
+              </a>
+            </p>
           </div>
         </div>
       </section>
