--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </p>
           <div class="about-stats">
             <div>
-              <h4>2</h4>
+              <h4>2+</h4>
               <span>Years in iOS</span>
             </div>
             <div>
@@ -212,8 +212,8 @@
             </p>
             <p>
               <strong>Email:</strong> 
-              <a href="mailto:hello@codejourney.dev" style="color: var(--accent); text-decoration: none;">
-                hello@codejourney.dev
+              <a href="mailto:hilljamesconnor@gmail.com" style="color: var(--accent); text-decoration: none;">
+                hilljamesconnor@gmail.com
               </a>
             </p>
           </div>
