--- a/index.html
+++ b/index.html
@@ -171,23 +171,23 @@
           <p>
             I began my iOS development journey 2 years ago, diving deep into Swift, SwiftUI, and the Apple ecosystem. 
             What started as curiosity about building mobile apps quickly evolved into a passion for crafting polished, 
-            user-focused experiences.
+            user focused experiences.
           </p>
           <p>
             Since then, I've successfully launched 3 apps on the App Store, each teaching me valuable lessons about 
             design, performance optimization, and the importance of user feedback. From conceptualization to 
-            App Store submission, I've experienced the full development lifecycle—and loved every minute of it.
+            App Store submission, I've experienced the full development lifecycle and loved every minute of it.
           </p>
           <p>
             Through this blog, I document my learning process, share insights on iOS development best practices, 
-            and explore the evolving landscape of Apple platforms. Whether it's deep-diving into SwiftUI patterns, 
-            profiling app performance, or discussing architecture decisions, I aim to create content that helps 
+            and explore the evolving landscape of Apple platforms. Whether it's deep diving into SwiftUI patterns, 
+            profiling app performance, or discussing architecture decisions, I aim to create content that helps myself and
             fellow developers grow.
           </p>
           <p>
             I plan to continue expanding my app portfolio, experimenting with new Apple technologies, and learning 
-            as much as I can about building exceptional iOS experiences. My goal is to master Apple's first-party 
-            APIs and frameworks while sharing what I learn along the way.
+            as much as I can about building awesome iOS experiences just like that first time I uploaded to the App Store! My goal is to master Apple's 
+            APIs and frameworks while sharing what I learn along the way. Enjoy!
           </p>
           <div class="about-stats">
             <div>
