--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             and connect with developers who care about craftsmanship.
           </p>
           <div class="hero-cta">
-            <button class="primary-button" type="button">Join the Blog</button>
-            <button class="secondary-button" type="button">View Portfolio</button>
+            <button class="primary-button" type="button" onclick="window.location.href='#settings'">Join the Blog</button>
+            <button class="secondary-button" type="button" onclick="window.location.href='#portfolio'">View Portfolio</button>
           </div>
         </div>
         <div class="hero-card">
