--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
           </p>
           <div class="about-stats">
             <div>
-              <h4>2+</h4>
+              <h4 style="color: var(--accent);">2+</h4>
               <span>Years in iOS</span>
             </div>
             <div>
-              <h4>3</h4>
+              <h4 style="color: var(--accent);">3</h4>
               <span>Apps in App Store</span>
             </div>
             <div>
-              <h4>∞</h4>
+              <h4 style="color: var(--accent);">∞</h4>
               <span>Always Learning</span>
             </div>
           </div>
