--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Journey Blog</title>
+    <title>Connor Hill's Blog</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
         <div class="brand">
           <span class="brand-mark"></span>
           <div class="brand-text">
-            <p class="brand-title">Code Journey</p>
+            <p class="brand-title">Connor Hill</p>
             <p class="brand-subtitle">iOS Developer · Blog & Portfolio</p>
           </div>
         </div>
@@ -223,7 +223,7 @@
       <section class="tab-panel" id="settings">
         <div class="panel-header">
           <div>
-            <h2>Subscribe to Code Journey</h2>
+            <h2>Subscribe to Connor Hill's Blog</h2>
             <p class="muted">
               Don't miss out on the latest iOS development insights. Get new posts delivered directly to your inbox.
             </p>
@@ -287,7 +287,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div>
-          <p class="footer-title">Code Journey</p>
+          <p class="footer-title">Connor Hill's Blog</p>
           <p>© 2026 Connor Hill. All rights reserved.</p>
           <p class="footer-subtitle">Building delightful iOS experiences.</p>
         </div>
