--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div>
           <p class="footer-title">Connor Hill's Blog</p>
           <p>© 2026 Connor Hill. All rights reserved.</p>
-          <p class="footer-subtitle">Building delightful iOS experiences.</p>
+          <p class="footer-subtitle">Building awesome iOS experiences.</p>
         </div>
         <div class="footer-links">
           <div class="footer-section">
