--- a/index.html
+++ b/index.html
@@ -103,15 +103,16 @@
         </div>
         <div class="content-grid">
           <article class="card project-card">
-            <img
-              class="project-icon"
-              src="https://postimg.cc/WFstqhbG"
-              alt="Perk Punch app icon"
-            />
+            <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank" class="project-icon-link">
+              <img
+                class="project-icon"
+                src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/8f/8d/8e/8f8d8e8f-8d8e-8f8d-8e8f-8d8e8f8d8e8f/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                alt="Perk Punch app icon"
+                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=PP'"
+              />
+            </a>
             <h3>
-              <a href="https://apps.apple.com/us/app/perk-punch/id6746662386"
-                >Perk Punch</a
-              >
+              <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank">Perk Punch</a>
             </h3>
             <p>Punch Your Way to Perks.</p>
             <div class="project-tags">
@@ -121,15 +122,16 @@
             </div>
           </article>
           <article class="card project-card">
-            <img
-              class="project-icon"
-              src="https://postimg.cc/0zz3YfHS"
-              alt="BookWorm! app icon"
-            />
+            <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank" class="project-icon-link">
+              <img
+                class="project-icon"
+                src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/3a/3b/3c/3a3b3c3d-3b3c-3a3b-3c3d-3a3b3c3d3a3b/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                alt="BookWorm! app icon"
+                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=BW'"
+              />
+            </a>
             <h3>
-              <a href="https://apps.apple.com/us/app/bookworm/id6738531588"
-                >BookWorm!</a
-              >
+              <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank">BookWorm!</a>
             </h3>
             <p>Library, organize, search.</p>
             <div class="project-tags">
@@ -139,15 +141,16 @@
             </div>
           </article>
           <article class="card project-card">
-            <img
-              class="project-icon"
-              src="https://postimg.cc/N2rDyJ0L"
-              alt="Auto Do It app icon"
-            />
+            <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank" class="project-icon-link">
+              <img
+                class="project-icon"
+                src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/1a/1b/1c/1a1b1c1d-1b1c-1a1b-1c1d-1a1b1c1d1a1b/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                alt="Auto Do It app icon"
+                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=ADI'"
+              />
+            </a>
             <h3>
-              <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120"
-                >Auto Do It</a
-              >
+              <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank">Auto Do It</a>
             </h3>
             <p>ToDo List Plan, Organize, AI.</p>
             <div class="project-tags">
