--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
             <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank" class="project-icon-link">
               <img
                 class="project-icon"
-                src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/8f/8d/8e/8f8d8e8f-8d8e-8f8d-8e8f-8d8e8f8d8e8f/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                src="https://via.placeholder.com/120/3579ff/ffffff?text=PP"
                 alt="Perk Punch app icon"
-                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=PP'"
               />
             </a>
             <h3>
@@ -125,9 +124,8 @@
             <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank" class="project-icon-link">
               <img
                 class="project-icon"
-                src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/3a/3b/3c/3a3b3c3d-3b3c-3a3b-3c3d-3a3b3c3d3a3b/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                src="https://via.placeholder.com/120/3579ff/ffffff?text=BW"
                 alt="BookWorm! app icon"
-                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=BW'"
               />
             </a>
             <h3>
@@ -144,9 +142,8 @@
             <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank" class="project-icon-link">
               <img
                 class="project-icon"
-                src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/1a/1b/1c/1a1b1c1d-1b1c-1a1b-1c1d-1a1b1c1d1a1b/AppIcon-0-0-1x_U007epad-0-0-85-220.png/230x0w.webp"
+                src="https://via.placeholder.com/120/3579ff/ffffff?text=ADI"
                 alt="Auto Do It app icon"
-                onerror="this.src='https://via.placeholder.com/120/3579ff/ffffff?text=ADI'"
               />
             </a>
             <h3>
