--- a/post.html
+++ b/post.html
@@ -131,7 +131,7 @@
   <script type="module">
     import { db, auth } from './js/firebase-config.js';
     import { doc as firestoreDoc, getDoc, collection, addDoc, query, orderBy, getDocs, Timestamp, setDoc } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js';
-    import { signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js';
+    import { signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js';
 
     // Get post ID from URL
     const urlParams = new URLSearchParams(window.location.search);
@@ -164,10 +164,24 @@
     onAuthStateChanged(auth, (user) => {
       currentUser = user;
       if (user) {
-        loginBtn.textContent = 'Admin Panel';
-        loginBtn.onclick = () => window.location.href = 'admin.html';
+        loginBtn.textContent = 'Log Out';
+        loginBtn.classList.remove('primary-button');
+        loginBtn.classList.add('logout-button');
+        loginBtn.onclick = async () => {
+          if (confirm('Are you sure you want to log out?')) {
+            try {
+              await signOut(auth);
+              // Button will update automatically via onAuthStateChanged
+            } catch (error) {
+              console.error('Logout error:', error);
+              alert('Failed to log out. Please try again.');
+            }
+          }
+        };
       } else {
         loginBtn.textContent = 'Log In';
+        loginBtn.classList.remove('logout-button');
+        loginBtn.classList.add('primary-button');
         loginBtn.onclick = () => loginModal.style.display = 'flex';
       }
       
@@ -175,14 +189,6 @@
       updateCommentFormVisibility();
     });
 
-    // Open modal
-    loginBtn.addEventListener('click', () => {
-      if (loginBtn.textContent === 'Admin Panel') {
-        window.location.href = 'admin.html';
-      } else {
-        loginModal.style.display = 'flex';
-      }
-    });
 
     // Close modal
     closeModal.addEventListener('click', () => {
