--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
       import { auth } from './js/firebase-config.js';
       import { 
         signInWithEmailAndPassword,
-        onAuthStateChanged
+        onAuthStateChanged,
+        signOut
       } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js';
 
       const loginBtn = document.getElementById('loginBtn');
@@ -335,17 +336,25 @@
       // Check if already logged in
       onAuthStateChanged(auth, (user) => {
         if (user) {
-          loginBtn.textContent = 'Admin Panel';
-          loginBtn.onclick = () => window.location.href = 'admin.html';
-        }
-      });
-
-      // Open modal
-      loginBtn.addEventListener('click', () => {
-        if (loginBtn.textContent === 'Admin Panel') {
-          window.location.href = 'admin.html';
+          loginBtn.textContent = 'Log Out';
+          loginBtn.classList.remove('primary-button');
+          loginBtn.classList.add('logout-button');
+          loginBtn.onclick = async () => {
+            if (confirm('Are you sure you want to log out?')) {
+              try {
+                await signOut(auth);
+                // Button will update automatically via onAuthStateChanged
+              } catch (error) {
+                console.error('Logout error:', error);
+                alert('Failed to log out. Please try again.');
+              }
+            }
+          };
         } else {
-          loginModal.style.display = 'flex';
+          loginBtn.textContent = 'Log In';
+          loginBtn.classList.remove('logout-button');
+          loginBtn.classList.add('primary-button');
+          loginBtn.onclick = () => loginModal.style.display = 'flex';
         }
       });
 
