--- a/post.html
+++ b/post.html
@@ -129,7 +129,7 @@
   </footer>
 
   <script type="module">
-    import { db, auth } from './js/firebase-config.js';
+    import { db, auth, isAdmin } from './js/firebase-config.js';
     import { doc as firestoreDoc, getDoc, collection, addDoc, query, orderBy, getDocs, Timestamp, setDoc } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js';
     import { signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js';
 
@@ -164,20 +164,29 @@
     onAuthStateChanged(auth, (user) => {
       currentUser = user;
       if (user) {
-        loginBtn.textContent = 'Log Out';
-        loginBtn.classList.remove('primary-button');
-        loginBtn.classList.add('logout-button');
-        loginBtn.onclick = async () => {
-          if (confirm('Are you sure you want to log out?')) {
-            try {
-              await signOut(auth);
-              // Button will update automatically via onAuthStateChanged
-            } catch (error) {
-              console.error('Logout error:', error);
-              alert('Failed to log out. Please try again.');
+        if (isAdmin(user)) {
+          // Admin user - show Admin Panel button
+          loginBtn.textContent = 'Admin Panel';
+          loginBtn.classList.remove('logout-button');
+          loginBtn.classList.add('primary-button');
+          loginBtn.onclick = () => window.location.href = 'admin.html';
+        } else {
+          // Regular user - show Log Out button
+          loginBtn.textContent = 'Log Out';
+          loginBtn.classList.remove('primary-button');
+          loginBtn.classList.add('logout-button');
+          loginBtn.onclick = async () => {
+            if (confirm('Are you sure you want to log out?')) {
+              try {
+                await signOut(auth);
+                // Button will update automatically via onAuthStateChanged
+              } catch (error) {
+                console.error('Logout error:', error);
+                alert('Failed to log out. Please try again.');
+              }
             }
-          }
-        };
+          };
+        }
       } else {
         loginBtn.textContent = 'Log In';
         loginBtn.classList.remove('logout-button');
