--- a/index.html
+++ b/index.html
@@ -216,9 +216,24 @@
             <p>
               Get notified when new blog posts and portfolio projects launch. Weekly digests with iOS tips, tricks, and best practices.
             </p>
-            <input type="text" name="fullName" placeholder="Full name" required />
-            <input type="email" name="email" placeholder="Email address" required />
-            <button class="primary-button" type="submit">Subscribe Now</button>
+            <div id="signupStep">
+              <input type="text" name="fullName" id="joinFullName" placeholder="Full name" required />
+              <input type="email" name="email" id="joinEmail" placeholder="Email address" required />
+              <input type="password" name="password" id="joinPassword" placeholder="Create password (min 6 characters)" required minlength="6" />
+              <button class="primary-button" type="submit">Subscribe & Create Account</button>
+            </div>
+            <div id="verificationStep" style="display: none;">
+              <h4 style="margin: 0 0 8px 0; color: var(--text-primary);">📧 Check Your Email</h4>
+              <p style="margin: 0 0 16px 0; color: var(--text-secondary); font-size: 14px;">
+                We've sent a 6-digit verification code to <strong id="verifyEmail"></strong>
+              </p>
+              <input type="text" id="verificationCode" placeholder="Enter 6-digit code" maxlength="6" pattern="[0-9]{6}" required style="text-align: center; font-size: 24px; font-weight: 600; letter-spacing: 8px;" />
+              <button class="primary-button" type="button" id="verifyCodeBtn">Verify & Complete Signup</button>
+              <div style="display: flex; gap: 8px; margin-top: 8px;">
+                <button class="secondary-button" type="button" id="resendCodeBtn" style="flex: 1;">Resend Code</button>
+                <button class="ghost-button" type="button" id="cancelVerificationBtn" style="flex: 1;">Cancel</button>
+              </div>
+            </div>
             <div class="form-message" id="joinMessage" role="status"></div>
             <p class="form-note">
               <small>🔒 No spam. Unsubscribe at any time. I respect your privacy.</small>
